[gd_scene load_steps=16 format=3 uid="uid://dhq842smuy36g"]

[ext_resource type="Script" uid="uid://cr7ys3qi5kqax" path="res://src/scripts/Panels/MiningScene/asteroid_1.gd" id="1_7gn1o"]
[ext_resource type="Material" uid="uid://r6278eksd1t8" path="res://src/scripts/Panels/MiningScene/HitFlashMaterial.tres" id="1_xcndo"]
[ext_resource type="PackedScene" uid="uid://n3yo7bmy3a6t" path="res://src/scenes/MiningScene/ResourceContainer.tscn" id="3_67g2f"]
[ext_resource type="PackedScene" uid="uid://dnuap0h1mymkl" path="res://src/scenes/MiningScene/AsteroidAnimationPlayer.tscn" id="5_x0aoh"]
[ext_resource type="PackedScene" uid="uid://caifkek63qji4" path="res://src/scenes/MiningScene/AsteroidClickControl.tscn" id="6_1qpv8"]
[ext_resource type="FontFile" uid="uid://50qlm4au2mjm" path="res://assets/graphics/Fonts/Valorax-lg25V.otf" id="6_f6dvx"]
[ext_resource type="Texture2D" uid="uid://dhkaanm0hvv0t" path="res://assets/graphics/UI/guide_grid.png" id="7_o6pfe"]

[sub_resource type="Shader" id="Shader_f6dvx"]
resource_local_to_scene = true
code = "shader_type canvas_item;
uniform float flash_amount = 0.0; // 0 = normal, 1 = full white flash
void vertex() {
	// Called for every vertex the material is visible on.
}

void fragment() {
	vec4 tex_color = texture(TEXTURE, UV);
    vec4 white = vec4(1.0);
    COLOR = mix(tex_color, white, flash_amount);
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_13la0"]
resource_local_to_scene = true
shader = SubResource("Shader_f6dvx")
shader_parameter/flash_amount = 0.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o6pfe"]
resource_local_to_scene = true
load_path = "res://.godot/imported/Asteroid1.png-b2cf4fa3275cc253680bccde9888a1aa.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gn1o"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_67g2f"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_13la0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_f6dvx"]
resource_name = "blink"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("NinePatchRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.298634, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51k4x"]
_data = {
&"RESET": SubResource("Animation_13la0"),
&"blink": SubResource("Animation_f6dvx")
}

[node name="Asteroid1" type="CharacterBody2D"]
material = ExtResource("1_xcndo")
script = ExtResource("1_7gn1o")
speed = 60.0
health = 1
damage = 2

[node name="Graphic" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_13la0")
texture = SubResource("CompressedTexture2D_o6pfe")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_7gn1o")

[node name="ResourceContainer" parent="." node_paths=PackedStringArray("parent") instance=ExtResource("3_67g2f")]
parent = NodePath("..")
ferrite_min_value = 5
ferrite_max_value = 10
platinum_min_value = 2
platinum_max_value = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_67g2f")

[node name="DeleteAsteroidTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="AsteroidAnimationPlayer" parent="." instance=ExtResource("5_x0aoh")]

[node name="AsteroidClickControl" parent="." instance=ExtResource("6_1qpv8")]
offset_left = -14.0
offset_top = -13.0
offset_right = 14.0
offset_bottom = 13.0
mouse_default_cursor_shape = 3

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
visible = false
offset_left = -13.0
offset_top = -11.0
offset_right = 13.0
offset_bottom = 12.0
texture = ExtResource("7_o6pfe")
region_rect = Rect2(0.457371, 0.428299, 7.08078, 7.0897)

[node name="Label" type="Label" parent="NinePatchRect"]
layout_mode = 0
offset_top = -6.0
offset_right = 18.0
theme_override_fonts/font = ExtResource("6_f6dvx")
theme_override_font_sizes/font_size = 5
text = "Click"

[node name="GuideBoxAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_51k4x")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="DeleteAsteroidTimer" to="." method="_on_delete_asteroid_timer_timeout"]
[connection signal="gui_input" from="AsteroidClickControl" to="." method="_on_asteroid_click_control_gui_input"]

[editable path="AsteroidAnimationPlayer"]
